@@ -30,7 +30,7 @@
         <version.roda>5.4.0</version.roda>
         <version.jersey>3.1.6</version.jersey>
         <version.swagger>2.2.20</version.swagger>
-        <version.jackson>2.17.0</version.jackson>
+        <version.jackson>2.17.1</version.jackson>
         <version.cas-client>4.0.4</version.cas-client>
         <version.solr>9.6.0</version.solr>
         <version.springboot>3.2.5</version.springboot>
@@ -122,6 +122,10 @@
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
+                <configuration>
+                    <attachClasses>true</attachClasses>
+                    <classesClassifier>classes</classesClassifier>
+                </configuration>
             </plugin>
         </plugins>
 
@@ -224,9 +228,9 @@
                                 <configuration>
                                     <moduleName>${server}</moduleName>
                                     <systemProperties>
-                                        <jakarta.xml.parsers.SAXParserFactory>
+                                        <javax.xml.parsers.SAXParserFactory>
                                             org.apache.xerces.jaxp.SAXParserFactoryImpl
-                                        </jakarta.xml.parsers.SAXParserFactory>
+                                        </javax.xml.parsers.SAXParserFactory>
                                     </systemProperties>
                                 </configuration>
                                 <goals>
@@ -252,6 +256,9 @@
                         <artifactId>spring-boot-maven-plugin</artifactId>
                         <version>${version.springboot}</version>
                         <configuration>
+                            <environmentVariables>
+                                <SOLR_ZOOKEEPER_HOSTS>localhost:2181</SOLR_ZOOKEEPER_HOSTS>
+                            </environmentVariables>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>
                                     ${project.build.directory}/${project.build.finalName}
@@ -260,10 +267,13 @@
                             <jvmArguments>
                                 -Dgwt.codeServerPort=9876 -Xdebug
                                 -Djava.net.preferIPv4Stack=true
-                                -Djakarta.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
-                                -Djakarta.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl
+                                -Djavax.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
+                                -Djavax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl
                                 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
                                 -Dserver.port=8080
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
                             </jvmArguments>
                         </configuration>
                     </plugin>
@@ -620,7 +630,7 @@
         <dependency>
             <groupId>org.fusesource.restygwt</groupId>
             <artifactId>restygwt</artifactId>
-            <version>2.2.8-SNAPSHOT</version>
+            <version>2.2.11-KEEPS</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
